--- a/portfolio/levelground/assets/css/customLevelGround.css
+++ b/portfolio/levelground/assets/css/customLevelGround.css
@@ -298,6 +298,12 @@ h3 {
 		padding-left: 5px;
 		padding-right: 5px;
 	}
+	/*Fixed background*/
+	body {
+		background: url(../img/background.jpg) repeat center top;
+		background-attachment: fixed;
+
+	}
 }
 
 #f {
